@@ -17,38 +17,31 @@ and execution of a test suite.
 
 FCT_BGN()
 {
-    int a = 0 && _fct_check_char('a', 'b');
-    if ( a )
+    void *data =NULL;
+    FCT_FIXTURE_SUITE_BGN("1Suite")
     {
-        _fct_check_char_lower('a', 'b');
-    }
-
-    {
-        void *data =NULL;
-        FCT_FIXTURE_SUITE_BGN("1Suite")
+        FCT_SETUP_BGN()
         {
-            FCT_SETUP_BGN()
-            {
-                data = malloc(sizeof(10));
-            }
-            FCT_SETUP_END();
-
-            FCT_TEARDOWN_BGN()
-            {
-                free(data);
-                data =NULL;
-            }
-            FCT_TEARDOWN_END();
-
-            FCT_TEST_BGN("1Test")
-            {
-                fct_chk( strcmp("a", "b") != 0 );
-            }
-            FCT_TEST_END();
-
+            data = malloc(sizeof(10));
         }
-        FCT_FIXTURE_SUITE_END();
+        FCT_SETUP_END();
+
+        FCT_TEARDOWN_BGN()
+        {
+            free(data);
+            data =NULL;
+        }
+        FCT_TEARDOWN_END();
+
+        FCT_TEST_BGN("1Test")
+        {
+            fct_chk( strcmp("a", "b") != 0 );
+        }
+        FCT_TEST_END();
+
     }
+    FCT_FIXTURE_SUITE_END();
 
 }
 FCT_END();
+
