@@ -5,7 +5,9 @@ FCTX Changes
 Whats new in FCT 1.2
 --------------------
 
- - FIX (486457): #pragma down to warning level 3 for MSC during FCTMF calls.
+ - ENH: (sys-command-line-parser) - ability to parse and read command line
+   options.
+ - FIX: (486457) - #pragma down to warning level 3 for MSC during FCTMF calls.
  - FIX: CMAKE now configures MSC to compile with /W4. 
  - FIX: GCC now compiles with higher warning levels
  - FIX: Removed redundant count found in FCT_END.
